# mcp-python-baremetal

./: README.md  pyproject.toml
.github/workflows/: quality.yml  test.yml
examples/: claude_config.json  code_examples.py  http_demo.py
mcp_python_baremetal/: __init__.py  cli.py  executor.py  fastmcp_server.py  http_server.py  server.py
tests/: test_executor.py
