[project]
name = "mcp-python-baremetal"
version = "0.1.0"
description = "A baremetal Python execution MCP server supporting HTTP/SSE and CLI interfaces"
authors = [
    {name = "BugParty", email = "bugparty@example.com"},
]
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sse-starlette>=1.6.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "sympy>=1.12.0",
    "jax[cpu]>=0.4.0",
    "torch>=2.0.0,<3.0.0",  # CPU version
    "torchvision>=0.15.0,<1.0.0",
    "numba>=0.58.0",
    "cvxpy>=1.4.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    # Note: SageMath is typically installed system-wide, not via pip
    # Users should install it separately if needed
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
mcp-python-baremetal = "mcp_python_baremetal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"